1998-11-16  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* predicates.[hm] (keywordp, valuep, arrayp): New predicates.

	* InputStream.m: Include misc.h instead of stdio.h and ctype.h
	Include predicates.h.
	([InputStream_c -getExpr]): Don't require leading 0 on octal
	numbers.  Handle negative values.  

	* InputStream.[hm] (ArchiverKeyword_c,
	ArchiverArray_c, ArchiverValue_c): New classes.

	* collections.h: Add corresponding protocols.

	* collections.m (_collections_implement): Associate them.

1998-11-15  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* InputStream.m ([InputStream_c -_unexpectedEOF_], 
	[InputStream_c -_badType_:]): Raise an event instead of aborting.
	Change return type to void.
	([InputStream_c -getExpr]): Add support for keyword and array
	loading.

1998-11-12  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* OutputStream.[hm]: Remove -appendC:.

1998-11-11  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Array.[hm] ([Array_c +create:setMemberAlloc:setCount:],
	[Array_c -getMemberAlloc]
	[Array_c -setMemberAlloc:setCount:]): Remove.

	* collections.h: Remove creating -setDefaultMember:; there is
	already a setting method.

1998-11-02  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* collections.h (Collection): Note that copies are shallow.

1998-10-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (REVISION): Increment.  Swarm 1.3.1 released.

	* OrderedSet.m: Reformatting throughout.
	([OrderedSet_c -contains:]): Return YES and NO instead of 1 and 0.  

	* collections.h (Sorted): Moved to design document.
	
	* StringObject.m ([String_c +create:setC:]): Use getZone instead
	of argument aZone for allocating string space.

1998-09-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Map.[hm]: ([MapIndex_c -setLoc:]): 
	Make argument to setLoc: of type id <Symbol>.

	* Set.[hm] ([SetIndex_c -setLoc:]): Likewise.

	* List_GEN.[hm] ([TINDEX -setLoc:]): Likewise.

	* Array.[hm] ([ArrayIndex_c -setLoc:]): Likewise.
