@@ -413,13 +413,13 @@ USING
 - (int)compare: anIndex;
 
 //#: Predicate to test if index is at the start.
-#define INDEXSTARTP(obj) ((id)(obj) == (id)Start)
+#define INDEXSTARTP(obj) ((id) (obj) == (id)Start)
 
 //#: Predicate to test if index is at the end.
-#define INDEXENDP(obj) ((id)(obj) == (id)End)
+#define INDEXENDP(obj) ((id) (obj) == (id)End)
 
 //#: Predicate to test if item at index has been removed.
-#define REMOVEDP(obj) ((id)(obj) == (id)Removed)
+#define REMOVEDP(obj) ((id) (obj) == (id)Removed)
 
 //G: values for index location
 extern id <Symbol>  Start, End, Between, Removed, Member;
@@ -998,7 +998,7 @@ USING
 - (void)drop;
 @end
 
-#define ARCHIVERLITERALP(obj) ((id)(obj) == (id)ArchiverLiteral)
+#define ARCHIVERLITERALP(obj) ((id) (obj) == (id)ArchiverLiteral)
 
 @protocol String <Create, Drop, Copy, CREATABLE>
 //S: Character string object (later to support collection behavior).
